Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
How to reproduce:
- ping 192.168.1.123 (or any unexistent host on your internal network)
- See results
Tested on Windows 7, ReactOS ping output:
Reply from 192.168.1.123: Reply from 11003. |
Reply from 192.168.1.123: Reply from 11003. |
Reply from 192.168.1.123: Reply from 11003. |
Reply from 192.168.1.123: Reply from 11003. |
Microsoft ping output:
Reply from 192.168.1.2: Destination host unreachable. |
Reply from 192.168.1.2: Destination host unreachable. |
Reply from 192.168.1.2: Destination host unreachable. |
Reply from 192.168.1.2: Destination host unreachable. |
(where 192.168.1.2 is my LAN computer address)
Attachments
Issue Links
- relates to
-
CORE-14242 Tracert command incorrectly behaves on unreachable host
-
- Resolved
-
- links to